@@ -1,3 +1,2 @@
 --force-V4
-!--annotate=
 !--force-R5
